src/test/ui/rfc1598-generic-associated-types/construct_with_other_type.stderr
warning: the feature `generic_associated_types` is incomplete and may cause the compiler to crash
  --> $DIR/construct_with_other_type.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

warning: lifetime parameter `'b` never used
  --> $DIR/construct_with_other_type.rs:10:18
   |
LL |     type Bar<'a, 'b>;
   |                --^^
   |                |
   |                help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

warning: lifetime parameter `'a` never used
  --> $DIR/construct_with_other_type.rs:10:14
   |
LL |     type Bar<'a, 'b>;
   |              ^^--
   |              |
   |              help: elide the unused lifetime

warning: lifetime parameter `'a` never used
  --> $DIR/construct_with_other_type.rs:14:15
   |
LL |     type Quux<'a>: Foo;
   |              -^^- help: elide the unused lifetime

warning: lifetime parameter `'a` never used
  --> $DIR/construct_with_other_type.rs:23:15
   |
LL |     type Quux<'a> = T;
   |              -^^- help: elide the unused lifetime

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/construct_with_other_type.rs:17:46
   |
LL |     type Baa<'a>: Deref<Target = <Self::Quux<'a> as Foo>::Bar<'a, 'static>>;
   |                                              ^^ lifetime argument not allowed

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/construct_with_other_type.rs:17:63
   |
LL |     type Baa<'a>: Deref<Target = <Self::Quux<'a> as Foo>::Bar<'a, 'static>>;
   |                                                               ^^ lifetime argument not allowed

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/construct_with_other_type.rs:25:40
   |
LL |     type Baa<'a> = &'a <T as Foo>::Bar<'a, 'static>;
   |                                        ^^ lifetime argument not allowed

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0109`.
